--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.LandingActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".activities.SignupActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
