--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TennisBuddy"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
@@ -23,10 +26,10 @@
         </activity>
         <activity
             android:name=".activities.LandingActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".activities.SignupActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
